# scim-bridge

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.brivo  README.md  docker-compose.yml  main.py  pyproject.toml
app/brivo/: client.py  dependencies.py  fetch.py  rate_limiter.py
app/core/: auth.py  config.py  errors.py  logging.py
app/models/: brivo.py  common.py  group.py  user.py
app/redis/: store.py
app/routers/: _helpers.py  discovery.py  groups.py  users.py
app/services/: add_members.py  create_group.py  create_user.py  delete_group.py  delete_user.py  field_mapper.py  patch_group.py  remove_members.py  saga.py  update_group.py  update_user.py
docs/: architecture.md  brivo-mock.md  database.md  infra.md  logging.md  rate-limiter.md  redis.md  saga.md  scim-server.md  tasks.md  testing.md
docs/specs/: 20260618133057_scim_user_models.md  20260618143212_scim_group_models.md  20260618190651_scim_common_models.md  20260618195155_brivo_models.md  20260619184934_mock_brivo_skeleton.md  20260619232153_mock_brivo_user_endpoints.md  20260619235930_mock_brivo_group_endpoints.md  20260620001317_mock_brivo_behavior_sim.md  20260620003030_brivo_client.md  20260620012831_rate_limiter.md  20260620114246_field_mapper_write.md  20260620115345_field_mapper_read.md  20260620161942_member_hydration.md  20260620163423_saga_base_runner.md  20260620224016_create_user_saga.md  20260621214453_delete_user_saga.md  20260622074246_create_group_saga.md  20260622081041_delete_group_saga.md  (+8 more)
mock_brivo/: main.py
tests/: conftest.py
(+25 files in other folders)
